# MI-directional-WAM-reward-model-pretrain

./: .cursorignore  .gitignore  README.md  pyproject.toml  train_lawam.sh  train_lawam_distributed.sh
deployment/model_server/: dataset_replay_policy_base.py  server_policy.py  server_policy_dataset_replay.py  server_policy_http_dataset_replay.py  server_policy_http_franka.py  server_policy_http_isaac_groot.py  server_policy_tcp_fold_towel.py
deployment/model_server/tools/: websocket_policy_client.py  (+1 more)
deployment/realworld/: franka_client.py  franka_controller.py  franka_robot_state.py  utils.py
docs/: code_audit_before_dame_upgrade.md  dame_upgrade_implementation_report.md
docs/rlinf_integration/: franka_mi_potential_rlpd.rst  mi_potential_rlpd_code_audit.md  mi_potential_rlpd_implementation_report.md
examples/eval_utils/: __init__.py  similarity_video.py
latent_action_model/: main.py  precompute_cache.sh  precompute_dataset_cache.py  quick_train_test.sh  train.sh  train_ddp.sh
latent_action_model/config/: dino_base_vae.yaml  dino_large_vae.yaml
latent_action_model/core/: __init__.py  lam_lightinng.py  lam_model.py  vjepa_encoder.py  vq.py
latent_action_model/data_loader/: __init__.py  collate.py  lerobot_datamodule.py  lerobot_dataset.py  video_aug.py
mi_reward/: __init__.py
mi_reward/alignment/: __init__.py  monotonic_alignment.py
mi_reward/configs/: dame_mi_base.yaml  mi_reward_base.yaml
mi_reward/data/: __init__.py  build_manifest.py  preference_dataset.py  schema.py  video_dataset.py
mi_reward/evaluation/: __init__.py  eval_progress_corr.py  eval_reward_ranking.py
mi_reward/features/: __init__.py  base_extractor.py  cached_feature_store.py  dino_v3_extractor.py  lawam_lam_extractor.py
mi_reward/inference/: __init__.py  potential_model.py
mi_reward/models/: __init__.py  reward_head.py  state_potential_model.py
mi_reward/scoring/: __init__.py  baselines.py  build_preferences.py  dame_soft_histogram.py  directional_potential.py  mi_potential.py  token_correspondence.py  trajectory_score.py
mi_reward/scripts/: build_preferences.sh  eval_reward.sh  extract_features.sh  score_trajectories.sh  train_reward_sft.sh
mi_reward/training/: __init__.py  collator.py  loss.py  losses.py  train_reward_sft.py
requirements/: Makefile  install.sh  requirements.txt
starVLA/dataloader/: __init__.py  dino_pixel_decoder_collator.py  latent_world_train_collator.py  lerobot_datasets.py
starVLA/model/: tools.py
starVLA/training/: train_starvla.py
tests/: test_realworld_smoke.py
(+81 files in other folders)
