[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lawam"
authors = [
    {name = "Jialei Chen"},
    {name = "Kai Wang"},
    {name = "Kang Chen"},
    {name = "Shuaihang Chen"},
    {name = "Feng Gao"},
    {name = "Wenhao Tang"},
    {name = "Zhiyuan Li"},
    {name = "Weilin Liu"},
    {name = "Zhuyu Yao"},
    {name = "Boxun Li"},
    {name = "Yuanbo Xu"},
    {name = "Chao Yu"},
]
description = "Latent World Action Models for efficient dynamics-aware robot policies."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "robot manipulation",
    "vision-language-action models",
    "world action models",
    "latent world models",
    "latent action models",
    "robot learning",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "gpustat",
    "ipython",
    "pre-commit",
    "ruff>=0.2.2",
]
sagemaker = [
    "boto3",
    "sagemaker"
]


[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",         # test directory
    "cache",         # cache directory
    "playground",
    "results",       # result directory
    "checkpoints",   # model checkpoint
    "scripts",       # script directory
    "eval",          # evaluation related directory
    ".vscode",       # VS Code configuration directory
    "*.egg-info",    # egg-info metadata directory
    "**.log",         # log file
    "*.tmp",         # temporary file
    "*.bak",         # backup file
    "**__pycache__**",   # Python cache directory
    "*.pyc",         # compiled Python file
    "*.pyo",          # optimized Python file
    "**bar**",
    "starVLA/config",

]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
